[TestGenerator] Simplify the interfaces - keep only TestGenerator, have the implementations (LLM, trace) adhere to this one interface, unify configuration and context by using passing one instance of TestGenerationContext and RunConfiguration